[metadata]
name = qiskit-ibmq-provider
author = Qiskit Development Team
author_email = qiskit@qiskit.org
license = Apache 2.0
description = Qiskit provider for accessing the quantum devices and simulators at IBMQ
keywords = qiskit, sdk, quantum, api, ibmq
url = https://github.com/Qiskit/qiskit-ibmq-provider
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering


[options]
packages =
    qiskit.providers.ibmq
    qiskit.providers.ibmq.api
    qiskit.providers.ibmq.api.clients
    qiskit.providers.ibmq.api.rest
    qiskit.providers.ibmq.api.rest.utils
    qiskit.providers.ibmq.credentials
    qiskit.providers.ibmq.job
    qiskit.providers.ibmq.managed
    qiskit.providers.ibmq.utils
    qiskit.providers.ibmq.visualization
    qiskit.providers.ibmq.visualization.interactive
    qiskit.providers.ibmq.jupyter
    qiskit.providers.ibmq.jupyter.dashboard
zip_safe = False
install_requires =
    nest-asyncio>=1.0.0,!=1.1.0
    qiskit-terra>=0.14
    requests>=2.19
    requests-ntlm>=1.1.0
    websockets>=7,<8
    numpy>=1.13
    urllib3>=1.21.1
    python-dateutil>=2.8.0
include_package_data = True
python_requires = >=3.5

[options.extras_require]
visualization =
    matplotlib>=2.1
    ipywidgets>=7.3.0
    seaborn>=0.9.0
    plotly>=4.4
    ipyvuetify>=1.1
    pyperclip>=1.7
    ipython>=5.0.0

[pycodestyle]
count = False
ignore = E121,E123,E126,E226,E241,E242,E704,E741,W503,W504,W505
max-line-length = 100
statistics = True

[mypy]
python_version = 3.5
namespace_packages = True
ignore_missing_imports = True
warn_redundant_casts = True
warn_unreachable = True
strict_equality = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
strict_optional = False
show_none_errors = False
